css/main.css
body
{
    margin: 0px;
    padding: 0px;
    background-color: #fdfdfd;
    overflow: hidden;
    font-family: "Helvetica Neue", "Roboto", "Segoe UI", Arial, sans-serif;
}

.root
{
    width: 100%;
    height: 100%;
    display: flex;
    overflow: hidden;
}

.container
{
    float: left;
    animation-fill-mode: forwards;
    animation-duration: 0.5s;
}

.splash
{
    position: fixed;
    width: 100%;
    height: 100%;
    background-color: #ffffff;
    animation-delay: 1s;
    animation-fill-mode: forwards;
    animation-duration: 1s;
    animation-name: fade-out;
    z-index: 2;
}

.splash .title
{
    position: absolute;
    color: #555555;
    font-size: 42px;
    width: 100%;
    text-align: center;
    height: 40px;
    transform: translate(0px, -20px);
    top: 50%;
}

.clearfix
{
    clear: both;
}

input[type=text] 
{
    margin: 8px 0px;
    box-sizing: border-box;
    border: 1px solid #cccccc;
    border-radius: 5px;
    font-size: 18px;
    padding: 7px;
}

.footer
{
    background-color: #666666;
    width: 100%;
    height: 64px;

    position: absolute;
    bottom: 0px;

    color: #ffffff;
    text-align: center;
}

@media (max-width:800px) 
{
    .container
    {
        position: absolute;
    }
}

@keyframes fade-out
{
    0% { opacity: 1.0; }
    100% { opacity: 0.0; visibility: hidden; }
}

@keyframes exit-left
{
    0% { left: 0%; }
    100% { left: -100%; }
}

@keyframes enter-right
{
    0% { left: 100%; }
    100% { left: 0%; }
}


@keyframes exit-right
{
    0% { left: 0%; }
    100% { left: 100%; }
}

@keyframes enter-left
{
    0% { left: -100%; }
    100% { left: 0%; }
}

